placeholder background added to images

--- a/Frontend/src/assets/styles/cmps/_AsideMenu.scss
+++ b/Frontend/src/assets/styles/cmps/_AsideMenu.scss
@@ -188,6 +188,7 @@
                         border: 1px solid $clrSecondary4;
                         border-radius: 10px;
                         max-height: 150px;
+                        background: $clrSecondary5;
                       }
 
                       .invoice-icon {
