--- a/Frontend/src/assets/styles/cmps/_AppHeader.scss
+++ b/Frontend/src/assets/styles/cmps/_AppHeader.scss
@@ -163,6 +163,7 @@
                   width: 90px;
                   height: 80px;
                   object-fit: cover;
+                  background: $clrSecondary5;
                 }
 
                 .invoice-icon {
