--- a/Frontend/src/assets/styles/cmps/_GigPreview.scss
+++ b/Frontend/src/assets/styles/cmps/_GigPreview.scss
@@ -10,7 +10,7 @@
   img {
     aspect-ratio: 5/3;
     border-radius: 0.5em;
-    // object-fit: cover;
+    background: $clrSecondary5;
   }
 
   .carousel-container:hover~.preview-body .gig-title {
@@ -106,6 +106,7 @@
     height: 100%;
     aspect-ratio: 1.5/1;
     object-fit: cover;
+    background: $clrSecondary5;
   }
 
   .mobile-preview-body {
