--- a/Frontend/src/assets/styles/cmps/_GigDetailsInteractions.scss
+++ b/Frontend/src/assets/styles/cmps/_GigDetailsInteractions.scss
@@ -90,5 +90,21 @@
                 }
             }
         }
+
+        &.stage-one {
+            svg {
+                path {
+                    fill: white;
+                }
+            }
+        }
+
+        &.stage-two {
+            svg {
+                path {
+                    fill: black;
+                }
+            }
+        }
     }
 }
