--- a/Frontend/src/assets/styles/cmps/_ShareGigModal.scss
+++ b/Frontend/src/assets/styles/cmps/_ShareGigModal.scss
@@ -41,6 +41,7 @@
                     color: $clrSecondary6;
                     font-size: 15px;
                     padding-top: 1em;
+                    text-align: center;
                 }
 
                 &:hover {
