--- a/Frontend/src/assets/styles/setup/_mq.scss
+++ b/Frontend/src/assets/styles/setup/_mq.scss
@@ -496,6 +496,7 @@
 
   .dashboard-container {
     .seller-summary {
+
       .general-area,
       .financial-area {
         .info-area {
@@ -573,6 +574,7 @@
 
 .gig-index {
   @media (max-width: 1400px) {
+
     .gig-results-title,
     .selected-filters-wrapper,
     .gig-list {
@@ -587,7 +589,7 @@
   }
 
   @media (max-width: 600px) {
-    .pagination{
+    .pagination {
       margin-block-end: 2em;
       justify-self: center;
     }
@@ -630,6 +632,12 @@
       .gig-details-header {
         margin-block-end: 0px;
 
+        .carousel-container {
+          button {
+            display: none;
+          }
+        }
+
         .gig-overview {
           margin-block-end: 0;
 
@@ -662,6 +670,10 @@
         padding: 0 16px;
       }
     }
+
+    .gig-details-aside {
+      margin-block-end: 0;
+    }
   }
 
   @media (min-width: 481px) {
@@ -683,6 +695,10 @@
       .about-gig {
         margin: 1em 0;
       }
+    }
+
+    .gig-details-aside {
+      margin-block-end: 30px;
     }
   }
 
@@ -901,6 +917,7 @@
 
 .modal-wrapper {
   @media (max-width: 480px) {
+
     .invoice-modal,
     .review-modal,
     .share-gig-modal {
@@ -988,6 +1005,7 @@
     .review-modal {
       .reviewed-gig {
         .title-user-info {
+
           h3,
           h4 {
             font-size: 16px;
@@ -1003,6 +1021,7 @@
   }
 
   @media (min-width: 481px) {
+
     .invoice-modal,
     .review-modal,
     .share-gig-modal {
@@ -1102,6 +1121,7 @@
     .review-modal {
       .reviewed-gig {
         .title-user-info {
+
           h3,
           h4 {
             font-size: 21px;
