minor design tweak

--- a/Frontend/src/assets/styles/cmps/_GigReviews.scss
+++ b/Frontend/src/assets/styles/cmps/_GigReviews.scss
@@ -29,6 +29,7 @@
         margin-inline-end: 16px;
         object-fit: cover;
         min-width: 48px;
+        background: $clrSecondary5;
       }
 
       .country {
