--- a/Frontend/src/assets/styles/cmps/_UserPreview.scss
+++ b/Frontend/src/assets/styles/cmps/_UserPreview.scss
@@ -44,6 +44,7 @@
     height: 4rem;
     border-radius: 50%;
     border: none;
+    background: $clrSecondary5;
   }
 
   .user-gig-details-wrapper {
