--- a/Frontend/src/assets/styles/cmps/_GigFilter.scss
+++ b/Frontend/src/assets/styles/cmps/_GigFilter.scss
@@ -62,7 +62,7 @@
       margin: 0.25em 0;
       transition: border-color 0.5s cubic-bezier(0.215, 0.61, 0.355, 1);
     }
-    .filtered-clr {
+    .clear-filter {
       border-radius: 1.5em;
       border: 1px solid $clrPrimary2;
       padding: 0.5em 0.75em;
