--- a/Frontend/src/assets/styles/cmps/_LoginSignup.scss
+++ b/Frontend/src/assets/styles/cmps/_LoginSignup.scss
@@ -1,112 +1,123 @@
 .user-login-wrapper {
-    position: fixed;
-    top: 5%;
-    left: 0%;
-    right: 0%;
-    bottom: 5%;
-    background: $clrPrimary1;
-    z-index: 60;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-    display: flex;
-    margin: auto;
+  position: fixed;
+  top: 5%;
+  left: 0%;
+  right: 0%;
+  bottom: 5%;
+  background: $clrPrimary1;
+  z-index: 60;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  display: flex;
+  margin: auto;
 
-    .login-notes {
-        width: 50%;
-        padding: 3em 2.5em;
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        border-radius: 15px 0px 0px 15px;
-        color: $clrPrimary1;
+  .login-notes {
+    width: 50%;
+    padding: 3em 2.5em;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 15px 0px 0px 15px;
+    color: $clrPrimary1;
 
-        .text {
-            h2 {
-                font-weight: 700;
-                margin-bottom: 0.5em;
-            }
+    .text {
+      h2 {
+        font-weight: 700;
+        margin-bottom: 0.5em;
+      }
 
-            li {
-                align-items: center;
-                gap: 0.5em;
-                margin-bottom: 1em;
-
-                h3 {
-                    font-size: 18px;
-                    font-weight: 400;
-                }
-
-                img {
-                    width: 12px;
-                    height: 12px;
-                    align-self: self-start;
-                    margin-top: 0.5em;
-                }
-            }
-        }
-    }
-
-    .user-interaction {
-        padding: 3em 2.5em 0.75em;
-        justify-content: space-between;
+      li {
+        align-items: center;
+        gap: 0.5em;
+        margin-bottom: 1em;
 
         h3 {
-            line-height: 1.0;
-            margin-top: 0.5em;
-            color: $clrSecondary6;
-            margin-bottom: 1em;
-
-            span {
-                cursor: pointer;
-                text-decoration: underline;
-                color: $clrPrimary2;
-            }
+          font-size: 18px;
+          font-weight: 400;
         }
 
-        form {
-
-            .signup-section,
-            .login-section {
-                gap: 0.5em;
-
-                div {
-                    label {
-                        color: $clrSecondary8;
-                        font-weight: 600;
-                    }
-
-                    input {
-                        font: inherit;
-                        padding: 8px 12px;
-                        border: 1px solid $clrSecondary45;
-                        border-radius: 5px;
-                        width: 100%;
-                        margin: .5em 0;
-
-                        &:focus {
-                            border: 1px solid $clrSecondary5;
-                            outline: none;
-                        }
-                    }
-                }
-            }
-
-            .login-section {
-                margin-top: -8em;
-            }
-
-            button {
-                margin-top: 1em;
-                font-size: 16px;
-                font-weight: 600;
-                line-height: 100%;
-                padding: 12px 24px;
-            }
+        img {
+          width: 12px;
+          height: 12px;
+          align-self: self-start;
+          margin-top: 0.5em;
         }
-
-        p {
-            font-size: 12px;
-            line-height: 20px;
-            color: $clrSecondary6;
-        }
+      }
     }
+  }
+
+  .user-interaction {
+    padding: 3em 2.5em 0.75em;
+    justify-content: space-between;
+    position: relative;
+
+    .close {
+      position: absolute;
+      right: 1.5em;
+      top: 1.5em;
+
+      svg {
+        width: 1em;
+        height: 1em;
+      }
+    }
+    
+    h3 {
+      line-height: 1;
+      margin-top: 0.5em;
+      color: $clrSecondary6;
+      margin-bottom: 1em;
+
+      span {
+        cursor: pointer;
+        text-decoration: underline;
+        color: $clrPrimary2;
+      }
+    }
+
+    form {
+      .signup-section,
+      .login-section {
+        gap: 0.5em;
+
+        div {
+          label {
+            color: $clrSecondary8;
+            font-weight: 600;
+          }
+
+          input {
+            font: inherit;
+            padding: 8px 12px;
+            border: 1px solid $clrSecondary45;
+            border-radius: 5px;
+            width: 100%;
+            margin: 0.5em 0;
+
+            &:focus {
+              border: 1px solid $clrSecondary5;
+              outline: none;
+            }
+          }
+        }
+      }
+
+      .login-section {
+        margin-top: -8em;
+      }
+
+      button {
+        margin-top: 1em;
+        font-size: 16px;
+        font-weight: 600;
+        line-height: 100%;
+        padding: 12px 24px;
+      }
+    }
+
+    p {
+      font-size: 12px;
+      line-height: 20px;
+      color: $clrSecondary6;
+    }
+  }
 }
