user can see preview his changes in gig edit (image uploading not included yet)

--- a/Frontend/src/assets/styles/pages/_GigDetails.scss
+++ b/Frontend/src/assets/styles/pages/_GigDetails.scss
@@ -39,6 +39,7 @@
           width: 20%;
           opacity: 0.6;
           padding: 1% 1% 1% 0;
+          cursor: pointer;
 
           &:last-child {
             padding-inline-end: 0;
