fixed font in welcomesection

--- a/Frontend/src/assets/styles/cmps/_WelcomeSection.scss
+++ b/Frontend/src/assets/styles/cmps/_WelcomeSection.scss
@@ -96,7 +96,7 @@
           font-weight: 100;
 
           span {
-            font-family: "domain-display-medium";
+            font-family: 'domain-display-medium';
             font-weight: 500;
             margin-left: 3px;
           }
