the about page not empty

--- a/Frontend/src/assets/styles/main.scss
+++ b/Frontend/src/assets/styles/main.scss
@@ -54,7 +54,7 @@
 
 // Pages
 @import "pages/HomePage";
-@import "pages/AboutUs";
+@import "pages/About";
 @import "pages/GigIndex";
 @import "pages/GigDetails";
 @import "pages/UserProfile";
