--- a/Frontend/src/assets/styles/basics/_base.scss
+++ b/Frontend/src/assets/styles/basics/_base.scss
@@ -135,7 +135,7 @@ input[type='number']::-moz-number-spin-down {
   margin: 0 rem(6px) 0 0;
   min-height: rem(48px);
   padding: rem(12px) rem(16px);
-  font-family: macan-regular;
+  font-family: 'macan-regular';
   transition: border-color 0.12s cubic-bezier(0.215, 0.61, 0.355, 1);
 }
 
