--- a/Frontend/src/assets/styles/cmps/_AppFooter.scss
+++ b/Frontend/src/assets/styles/cmps/_AppFooter.scss
@@ -86,6 +86,7 @@
     padding: 0.5em 0 1em 0;
     border-top: 1px solid $clrSecondary2;
     justify-items: center;
+    z-index: 20;
 
     a {
         min-width: 48px;
