--- a/Frontend/src/assets/styles/pages/_Chat.scss
+++ b/Frontend/src/assets/styles/pages/_Chat.scss
@@ -1,4 +1,4 @@
-.chat {
+.chats {
   position: absolute;
   top: 0;
   left: 0;
@@ -30,5 +30,65 @@
   .chat-body {
     width: 100%;
     height: 100%;
+    background-color: $clrSecondary2;
+    .buyers,
+    .sellers {
+      .title {
+        padding: 1em;
+        color: $clrSecondary5;
+      }
+
+      .chat {
+        position: relative;
+        width: 100%;
+        padding: 0.5em 1em;
+        background-color: $clrSecondary3;
+        border: 1px solid clrSecondary4;
+        display: flex;
+        align-items: center;
+        img {
+          width: 3.5em;
+          height: 3.5em;
+          border-radius: 50%;
+          margin-inline-end: 0.75em;
+          object-fit: cover;
+        }
+        .chat-info {
+          display: flex;
+          flex-direction: column;
+          width: 100%;
+          .user-info {
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            .name {
+            }
+            .username {
+              margin-inline-start: 0.75em;
+              font-size: 0.85em;
+              color: $clrSecondary7;
+            }
+            .time {
+              font-size: 0.85em;
+              color: $clrSecondary7;
+            }
+          }
+          .last-msg {
+            text-overflow: ellipsis;
+            color: $clrPrimary2;
+          }
+        }
+      }
+      .erase-chat {
+        position: absolute;
+        bottom: 1em;
+        right: 1em;
+        svg {
+          height: 1em;
+          width: 1em;
+          fill: $clrSecondary7;
+        }
+      }
+    }
   }
 }
