--- a/Frontend/src/assets/styles/cmps/_ImageCarousel.scss
+++ b/Frontend/src/assets/styles/cmps/_ImageCarousel.scss
@@ -26,7 +26,7 @@
         background-image: linear-gradient(0deg,
             rgba(0, 0, 0, 0.3),
             hsla(0, 0%, 100%, 0));
-        border-radius: 0.5em;
+        // border-radius: 0.5em;
         bottom: 0;
         content: '';
         height: 40%;
