image deletion is not out of control anymore, latest build

--- a/Frontend/src/assets/styles/pages/_GigEdit.scss
+++ b/Frontend/src/assets/styles/pages/_GigEdit.scss
@@ -81,8 +81,7 @@
                                         transition: all 0.2s;
                                         align-items: center;
                                         justify-content: center;
-                                        height: 100%;
-                                        max-height: 120px;
+                                        height: 120px;
                                         text-align: center;
 
                                         &:hover {
