--- a/Frontend/src/assets/styles/cmps/_Loader.scss
+++ b/Frontend/src/assets/styles/cmps/_Loader.scss
@@ -100,6 +100,9 @@
             box-shadow: 1px 1px 60px rgba(0, 0, 0, 0.3);
             border-radius: 50%;
             margin-right: 25px;
+            background: $bgColor5;
+            text-align: center;
+            color: $clrPrimary1;
         }
     }
 }
@@ -118,7 +121,6 @@
                 height: 48px;
                 animation: bounce 2s cubic-bezier(0.32, 0, 0.67, 1) infinite;
                 box-shadow: 1px 1px 60px rgba(0, 0, 0, 0.3);
-                border-radius: 50%;
             }
         }
     }
