fixed multiple css selectors

--- a/Frontend/src/assets/styles/pages/_GigIndex.scss
+++ b/Frontend/src/assets/styles/pages/_GigIndex.scss
@@ -38,10 +38,10 @@
 
       max-width: 500px;
       height: auto;
-      margin-block-end: auto important;
+      margin-block-end: auto;
     }
   }
-  
+
   .pagination {
     justify-content: center;
     color: $clrSecondary6;
