--- a/Frontend/src/assets/styles/cmps/_TypingLoader.scss
+++ b/Frontend/src/assets/styles/cmps/_TypingLoader.scss
@@ -3,7 +3,7 @@
   gap: .5em;
 
   .dot {
-    translate: -50%, -50%;
+    transform: translate(-50%, -50%);
     width: 0.75em;
     height: 0.75em;
     background-color: $clrSecondary45;
@@ -11,8 +11,7 @@
     animation: typing 2s infinite alternate;
 
     &:nth-of-type(1) {
-      animation-delay: 0;
-
+      animation-delay: 0ms;
     }
 
     &:nth-of-type(2) {
